idf_component_register(SRCS "cBuzzerMelody.cpp"
							"cDataFilter.cpp" 
							"cMsgUdpR01.cpp"
							"cMsgUdpRAndroid.cpp"
							"cMsgUdpT01.cpp"
							"cMsgUdpTAndroid.cpp"
							"cRxFilter.cpp"
							"kalmanFilter.cpp"
							"kalmanFilter_initialize.cpp"
							"Local_BMP280.cpp"
							"Local_HMC5883L.cpp"
							"Local_I2Cdev.cpp"
							"Local_MPU6050.cpp"
							"Local_MS5611.cpp"
							"Local_PID_v1.cpp"
							"Local_SFE_BMP180.cpp"
							"LocalLidarLite.cpp"
							"LocalTinyGPS++.cpp"
							"PID_YawAngle.cpp"
							"rt_nonfinite.cpp"
							"rtGetInf.cpp"
							"rtGetNaN.cpp"
							"uBloxGPS.cpp"
                       INCLUDE_DIRS "include")